Added blog editor and created blog model/migrations (base file only)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,6 +14,10 @@
   border-color: #e5e7eb; /* 2 */
 }
 
+.ck-editor__editable {
+    min-height: 250px;
+}
+
 ::before,
 ::after {
   --tw-content: '';
