--- a/public/css/app.css
+++ b/public/css/app.css
@@ -683,6 +683,9 @@ select {
 .inline-flex {
   display: inline-flex;
 }
+.table {
+  display: table;
+}
 .grid {
   display: grid;
 }
@@ -754,6 +757,9 @@ select {
 }
 .shrink-0 {
   flex-shrink: 0;
+}
+.table-auto {
+  table-layout: auto;
 }
 .origin-top-left {
   transform-origin: top left;
@@ -855,11 +861,17 @@ select {
 .border-l-4 {
   border-left-width: 4px;
 }
+.border-b-4 {
+  border-bottom-width: 4px;
+}
 .border-b-2 {
   border-bottom-width: 2px;
 }
 .border-r {
   border-right-width: 1px;
+}
+.border-r-4 {
+  border-right-width: 4px;
 }
 .border-gray-300 {
   --tw-border-opacity: 1;
@@ -915,9 +927,6 @@ select {
 }
 .p-1 {
   padding: 0.25rem;
-}
-.p-4 {
-  padding: 1rem;
 }
 .p-3 {
   padding: 0.75rem;
@@ -975,6 +984,9 @@ select {
 }
 .pr-4 {
   padding-right: 1rem;
+}
+.pl-4 {
+  padding-left: 1rem;
 }
 .pt-1 {
   padding-top: 0.25rem;
@@ -1078,6 +1090,10 @@ select {
 .text-indigo-700 {
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
+}
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 .text-gray-900 {
   --tw-text-opacity: 1;
