--- a/public/css/app.css
+++ b/public/css/app.css
@@ -761,6 +761,9 @@ select {
 .table-auto {
   table-layout: auto;
 }
+.border-collapse {
+  border-collapse: collapse;
+}
 .origin-top-left {
   transform-origin: top left;
 }
@@ -849,6 +852,9 @@ select {
 .border {
   border-width: 1px;
 }
+.border-4 {
+  border-width: 4px;
+}
 .border-2 {
   border-width: 2px;
 }
@@ -869,9 +875,6 @@ select {
 }
 .border-r {
   border-right-width: 1px;
-}
-.border-r-4 {
-  border-right-width: 4px;
 }
 .border-gray-300 {
   --tw-border-opacity: 1;
@@ -924,6 +927,9 @@ select {
 }
 .p-6 {
   padding: 1.5rem;
+}
+.p-4 {
+  padding: 1rem;
 }
 .p-1 {
   padding: 0.25rem;
