McComsey title appears on nav bar when scrolling below banner

--- a/public/css/my.css
+++ b/public/css/my.css
@@ -12,6 +12,10 @@
     background-size: cover;
 }
 
+.is-pinned {
+    display: flex;
+}
+
 .content-container, .banner, .placeholder {
     position: relative; /* crucial for z-index to work */
 }
