--- a/public/css/app.css
+++ b/public/css/app.css
@@ -614,11 +614,14 @@ select {
 .left-0 {
   left: 0px;
 }
-.top-0 {
-  top: 0px;
+.top-\[-1px\] {
+  top: -1px;
 }
 .right-0 {
   right: 0px;
+}
+.top-0 {
+  top: 0px;
 }
 .z-0 {
   z-index: 0;
@@ -722,9 +725,6 @@ select {
 .h-5 {
   height: 1.25rem;
 }
-.h-\[500px\] {
-  height: 500px;
-}
 .h-16 {
   height: 4rem;
 }
@@ -743,11 +743,11 @@ select {
 .h-8 {
   height: 2rem;
 }
-.min-h-screen {
-  min-height: 100vh;
-}
 .min-h-\[500px\] {
   min-height: 500px;
+}
+.min-h-screen {
+  min-height: 100vh;
 }
 .w-5 {
   width: 1.25rem;
