--- a/public/css/app.css
+++ b/public/css/app.css
@@ -629,8 +629,14 @@ select {
 .z-\[11\] {
   z-index: 11;
 }
+.z-\[15\] {
+  z-index: 15;
+}
 .z-50 {
   z-index: 50;
+}
+.m-0 {
+  margin: 0px;
 }
 .m-auto {
   margin: auto;
@@ -752,6 +758,9 @@ select {
 .w-5 {
   width: 1.25rem;
 }
+.w-screen {
+  width: 100vw;
+}
 .w-full {
   width: 100%;
 }
@@ -770,9 +779,6 @@ select {
 .w-20 {
   width: 5rem;
 }
-.w-screen {
-  width: 100vw;
-}
 .w-1\/2 {
   width: 50%;
 }
@@ -781,6 +787,9 @@ select {
 }
 .w-8 {
   width: 2rem;
+}
+.w-\[100vw\] {
+  width: 100vw;
 }
 .max-w-7xl {
   max-width: 80rem;
