--- a/public/css/app.css
+++ b/public/css/app.css
@@ -635,9 +635,6 @@ select {
 .z-50 {
   z-index: 50;
 }
-.m-0 {
-  margin: 0px;
-}
 .m-auto {
   margin: auto;
 }
@@ -758,9 +755,6 @@ select {
 .w-5 {
   width: 1.25rem;
 }
-.w-screen {
-  width: 100vw;
-}
 .w-full {
   width: 100%;
 }
@@ -779,6 +773,9 @@ select {
 .w-20 {
   width: 5rem;
 }
+.w-screen {
+  width: 100vw;
+}
 .w-1\/2 {
   width: 50%;
 }
@@ -787,9 +784,6 @@ select {
 }
 .w-8 {
   width: 2rem;
-}
-.w-\[100vw\] {
-  width: 100vw;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -1088,12 +1082,12 @@ select {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-\[6vw\] {
-  font-size: 6vw;
-}
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+.text-\[6vw\] {
+  font-size: 6vw;
 }
 .text-base {
   font-size: 1rem;
@@ -1114,6 +1108,10 @@ select {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
 }
 .font-medium {
   font-weight: 500;
