--- a/public/css/app.css
+++ b/public/css/app.css
@@ -704,6 +704,9 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
+.mr-3 {
+  margin-right: 0.75rem;
+}
 .mb-8 {
   margin-bottom: 2rem;
 }
@@ -727,6 +730,9 @@ select {
 }
 .h-5 {
   height: 1.25rem;
+}
+.h-auto {
+  height: auto;
 }
 .h-16 {
   height: 4rem;
@@ -754,6 +760,9 @@ select {
 }
 .w-5 {
   width: 1.25rem;
+}
+.w-2\/3 {
+  width: 66.666667%;
 }
 .w-full {
   width: 100%;
@@ -799,6 +808,12 @@ select {
 }
 .shrink-0 {
   flex-shrink: 0;
+}
+.basis-1\/3 {
+  flex-basis: 33.333333%;
+}
+.basis-2\/3 {
+  flex-basis: 66.666667%;
 }
 .table-auto {
   table-layout: auto;
@@ -1082,12 +1097,16 @@ select {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
 }
 .text-\[6vw\] {
   font-size: 6vw;
+}
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 .text-base {
   font-size: 1rem;
@@ -1108,10 +1127,6 @@ select {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
 }
 .font-medium {
   font-weight: 500;
