Multiple images works now with imgur. Updated styling as images as well

--- a/public/css/my.css
+++ b/public/css/my.css
@@ -5,6 +5,7 @@
 .ck-content ul { list-style: disc; margin-left: 1rem; }
 .ck-content ol { list-style: decimal; margin-left: 1rem; }
 .ck-content a { color: #0066cc; text-decoration: underline; }
+.ck-content img { width: 50%; }
 .ck-editor__editable_inline {
     min-height: 300px;
 }
