--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1389,6 +1389,12 @@ select {
 .mt-3 {
   margin-top: 0.75rem;
 }
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+.mr-3 {
+  margin-right: 0.75rem;
+}
 .ml-1 {
   margin-left: 0.25rem;
 }
@@ -1409,9 +1415,6 @@ select {
 }
 .mb-4 {
   margin-bottom: 1rem;
-}
-.mb-5 {
-  margin-bottom: 1.25rem;
 }
 .mb-6 {
   margin-bottom: 1.5rem;
@@ -1463,9 +1466,6 @@ select {
 }
 .mr-2 {
   margin-right: 0.5rem;
-}
-.mr-3 {
-  margin-right: 0.75rem;
 }
 .mr-4 {
   margin-right: 1rem;
@@ -1926,6 +1926,12 @@ select {
 .h-5 {
   height: 1.25rem;
 }
+.h-80 {
+  height: 20rem;
+}
+.h-auto {
+  height: auto;
+}
 .h-16 {
   height: 4rem;
 }
@@ -1977,9 +1983,6 @@ select {
 .h-64 {
   height: 16rem;
 }
-.h-auto {
-  height: auto;
-}
 .h-px {
   height: 1px;
 }
@@ -1991,9 +1994,6 @@ select {
 }
 .h-11 {
   height: 2.75rem;
-}
-.h-80 {
-  height: 20rem;
 }
 .max-h-full {
   max-height: 100%;
@@ -2021,6 +2021,9 @@ select {
 }
 .w-5 {
   width: 1.25rem;
+}
+.w-2\/3 {
+  width: 66.666667%;
 }
 .w-full {
   width: 100%;
@@ -2090,9 +2093,6 @@ select {
 }
 .w-1\/3 {
   width: 33.333333%;
-}
-.w-2\/3 {
-  width: 66.666667%;
 }
 .w-1\/4 {
   width: 25%;
@@ -3438,6 +3438,9 @@ select {
 .rounded-md {
   border-radius: 0.375rem;
 }
+.rounded-lg {
+  border-radius: 0.5rem;
+}
 .rounded {
   border-radius: 0.25rem;
 }
@@ -3449,9 +3452,6 @@ select {
 }
 .rounded-xl {
   border-radius: 0.75rem;
-}
-.rounded-lg {
-  border-radius: 0.5rem;
 }
 .rounded-full {
   border-radius: 9999px;
@@ -3559,11 +3559,11 @@ select {
 .border-8 {
   border-width: 8px;
 }
-.border-b {
-  border-bottom-width: 1px;
-}
 .border-t {
   border-top-width: 1px;
+}
+.border-b {
+  border-bottom-width: 1px;
 }
 .border-t-2 {
   border-top-width: 2px;
@@ -3611,6 +3611,10 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
 .border-gray-100 {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
@@ -3624,10 +3628,6 @@ select {
 }
 .border-current {
   border-color: currentColor;
-}
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 .border-white {
   --tw-border-opacity: 1;
@@ -4711,6 +4711,9 @@ select {
   -o-object-position: top;
      object-position: top;
 }
+.p-3 {
+  padding: 0.75rem;
+}
 .p-4 {
   padding: 1rem;
 }
@@ -4722,9 +4725,6 @@ select {
 }
 .p-1 {
   padding: 0.25rem;
-}
-.p-3 {
-  padding: 0.75rem;
 }
 .p-5 {
   padding: 1.25rem;
@@ -4931,6 +4931,9 @@ select {
   padding-top: 2.75rem;
   padding-bottom: 2.75rem;
 }
+.pt-6 {
+  padding-top: 1.5rem;
+}
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -5062,9 +5065,6 @@ select {
 }
 .pt-5 {
   padding-top: 1.25rem;
-}
-.pt-6 {
-  padding-top: 1.5rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -5218,6 +5218,14 @@ select {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
 .text-\[6vw\] {
   font-size: 6vw;
 }
@@ -5233,10 +5241,6 @@ select {
   font-size: 0.75rem;
   line-height: 1rem;
 }
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -5247,10 +5251,6 @@ select {
 }
 .text-5xl {
   font-size: 3rem;
-  line-height: 1;
-}
-.text-6xl {
-  font-size: 3.75rem;
   line-height: 1;
 }
 .text-7xl {
@@ -6290,6 +6290,14 @@ select {
 .hover\:text-gray-100:hover {
   --tw-text-opacity: 1;
   color: rgb(243 244 246 / var(--tw-text-opacity));
+}
+.hover\:underline:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+.hover\:decoration-solid:hover {
+  -webkit-text-decoration-style: solid;
+          text-decoration-style: solid;
 }
 .focus\:z-10:focus {
   z-index: 10;
