--- a/public/css/app.css
+++ b/public/css/app.css
@@ -835,6 +835,24 @@ select {
 .top-px {
   top: 1px;
 }
+.top-2 {
+  top: 0.5rem;
+}
+.left-4 {
+  left: 1rem;
+}
+.top-5 {
+  top: 1.25rem;
+}
+.left-5 {
+  left: 1.25rem;
+}
+.top-6 {
+  top: 1.5rem;
+}
+.left-3 {
+  left: 0.75rem;
+}
 .z-0 {
   z-index: 0;
 }
@@ -1386,8 +1404,14 @@ select {
 .-ml-px {
   margin-left: -1px;
 }
+.ml-10 {
+  margin-left: 2.5rem;
+}
 .mt-4 {
   margin-top: 1rem;
+}
+.ml-5 {
+  margin-left: 1.25rem;
 }
 .mt-3 {
   margin-top: 0.75rem;
@@ -1581,17 +1605,11 @@ select {
 .ml-4 {
   margin-left: 1rem;
 }
-.ml-5 {
-  margin-left: 1.25rem;
-}
 .ml-6 {
   margin-left: 1.5rem;
 }
 .ml-8 {
   margin-left: 2rem;
-}
-.ml-10 {
-  margin-left: 2.5rem;
 }
 .ml-12 {
   margin-left: 3rem;
@@ -1860,6 +1878,9 @@ select {
 .-mt-0 {
   margin-top: -0px;
 }
+.ml-\[3\.75rem\] {
+  margin-left: 3.75rem;
+}
 .box-border {
   box-sizing: border-box;
 }
@@ -2022,11 +2043,14 @@ select {
 .w-5 {
   width: 1.25rem;
 }
-.w-full {
-  width: 100%;
+.w-\[90\%\] {
+  width: 90%;
 }
 .w-2\/3 {
   width: 66.666667%;
+}
+.w-full {
+  width: 100%;
 }
 .w-10 {
   width: 2.5rem;
@@ -2165,9 +2189,6 @@ select {
 }
 .w-11 {
   width: 2.75rem;
-}
-.w-\[90\%\] {
-  width: 90%;
 }
 .min-w-0 {
   min-width: 0px;
@@ -6177,6 +6198,14 @@ select {
 }
 .ring-offset-yellow-100 {
   --tw-ring-offset-color: #fef9c3;
+}
+.drop-shadow-sm {
+  --tw-drop-shadow: drop-shadow(0 1px 1px rgb(0 0 0 / 0.05));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.drop-shadow-lg {
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .backdrop-brightness-65 {
   --tw-backdrop-brightness: brightness(.65);
